# geom3d

./: CMakeLists.txt  main_geometry.cpp
src/: line.cpp  line.hpp  line_segment.cpp  line_segment.hpp  plane.cpp  plane.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  pretty_printer.cpp  pretty_printer.hpp  utils.hpp
